--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -111,6 +111,7 @@
         android:layout_weight="1">
 
         <TextView
+            android:id="@+id/durationSeekbar"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@color/black"
@@ -119,6 +120,7 @@
             android:gravity="center"/>
 
         <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/seekbarMusic"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -126,6 +128,7 @@
             />
 
         <TextView
+            android:id="@+id/endSeekbar"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@color/black"
