--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -15,6 +15,7 @@
         android:gravity="center">
 
         <ImageButton
+            android:id="@+id/back_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/back_icon2"
@@ -147,6 +148,7 @@
         android:layout_weight="1">
 
         <ImageButton
+            android:id="@+id/repeat_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/repeat_icon"
