--- a/app/src/main/res/layout/favorite_view.xml
+++ b/app/src/main/res/layout/favorite_view.xml
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:textColor="@color/black"
-        android:text="@string/song_name"/>
+        android:text="@string/song_name"
+        android:gravity="center"/>
 
 
 
