--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@id/linearLayout"
         android:scrollbars="vertical"
         android:paddingBottom="40dp"
-        />
+        android:layout_marginTop="10dp"/>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:layout_width="wrap_content"
