--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -35,12 +35,14 @@
             android:layout_weight="1"/>
 
         <ImageButton
+            android:id="@+id/favouriteBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
             android:src="@drawable/favorite_empty_icon"
             android:background="@android:color/transparent"
             app:tint="@color/cool_pink"
-            android:contentDescription="@string/favorite_description"/>
+            android:contentDescription="@string/favourite_description"/>
 
 
 
